Teach the PMeshMaterial texture methods about the baseURL Fix Collada loader bug when loading Arena Environment